Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46286

WebView object created and destroyed dynamically makes android-app crash.

XMLWordPrintable

    • c73251113d96119e5b937f81bbacfbcff2ef94cb

      Using dynamic create-destroy pattern from last example of this document page:
      http://doc.qt.io/qt-5/qtqml-javascript-dynamicobjectcreation.html

      Creating WebView using Qt.createQmlObject and then destroying it makes android application crash.

      Used example:

      import QtQuick 2.4
      import QtQuick.Window 2.2
      //import QtWebView 1.1
      Window {
          id: rootWindow
          Component.onCompleted: {
              var webv = Qt.createQmlObject(
                  "import QtQuick 2.4; import QtWebView 1.0; WebView { url: 'http://www.qt.io/'; anchors.fill: parent; }", rootWindow);
              webv.destroy(10000);
          }
      }
      

      edited: commented out line 3, because it has no relevance to example.

        For Gerrit Dashboard: QTBUG-46286
        # Subject Branch Project Status CR V

            stromme Christian
            vivelu Ville Lukka
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes