Fix crash on destruction of QWebView instances.

The QWebView and QWebViewPrivate class are now in the object tree and
will therefore be delete once their parent is destroyed.
This change removes the QScopedPointers that used to manage the
lifetime of the webview instances.

Task-number: QTBUG-46286
Change-Id: I2d7f12b317770113e5b35c14b60df7442aa3e68e
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>